# VibrationDAQ

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.yaml  vibration_daq.service
ADcmXL3021_adapter/: ADcmXL3021_adapter.kicad_pcb  ADcmXL3021_adapter.kicad_pcb-bak  ADcmXL3021_adapter.pro  ADcmXL3021_adapter.sch  ADcmXL3021_adapter.sch-bak
ADcmXL3021_adapter/gerbers/: ADcmXL3021_adapter-B_Cu.gbl  ADcmXL3021_adapter-B_Mask.gbs  ADcmXL3021_adapter-B_SilkS.gbo  ADcmXL3021_adapter-Edge_Cuts.gml  ADcmXL3021_adapter-F_Cu.gtl  ADcmXL3021_adapter-F_Mask.gts  ADcmXL3021_adapter-F_SilkS.gto  ADcmXL3021_adapter-job.gbrjob  ADcmXL3021_adapter.txt
apps/: CMakeLists.txt  main.cpp
cmake/Modules/: FindYaml.cmake
docs/: ADcmXL3021_memory_map.ods  vibration_data_MFFT_2020-06-17T16_08_57.423_sensor1.csv  vibration_data_MTC_2020-06-25T07_34_45.609_sensor1.csv
include/vibration_daq/: ADcmXL3021Library.hpp  ConfigModule.hpp  StorageModule.hpp  VibrationSensorModule.hpp
include/vibration_daq/entities/: DecimationFactor.hpp  FIRFilter.hpp  RecordingConfig.hpp  RecordingMode.hpp  VibrationData.hpp  VibrationSensorConfig.hpp  WindowSetting.hpp
include/vibration_daq/utils/: EnumConversion.hpp  HexUtils.hpp
lib/date/: date.h  tz.h
src/: CMakeLists.txt  ConfigModule.cpp  StorageModule.cpp  VibrationSensorModule.cpp
